added a paragraph in lodging.component

--- a/angular/src/app/modules/lodging/lodging/lodging.component.html
+++ b/angular/src/app/modules/lodging/lodging/lodging.component.html
@@ -17,6 +17,7 @@
               <p>
                 {{ lodging.location.address.postalCode }}
               </p>
+              <p>this is a paragraph added to practice git commands</p>
             </div>
           </div>
         </div>
