--- a/angular/src/app/modules/booking/featured-lodging/featured-lodging.component.html
+++ b/angular/src/app/modules/booking/featured-lodging/featured-lodging.component.html
@@ -7,8 +7,8 @@
 
   <div class="tile">
     <div class="tile is-parent" *ngFor="let lodging of displayLodgings">
-      <div class="tile is-child">
-        <div class="card">
+      <div class="tile is-child dropdown is-hoverable" (click)="featureClick(lodging)">
+        <div class="card dropdown-trigger" aria-haspopup="true" aria-controls="this-dropdown-tooltip">
           <div class="card-image">
             <figure class="image is-4by3">
               <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
@@ -27,6 +27,19 @@
               <p id="card-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Phasellus nec iaculis mauris. {{ review.comment }}
               </p>
+            </div>
+          </div>
+        </div>
+        <div class="dropdown-menu" id="this-dropdown-tooltip" role="menu">
+          <div class="dropdown-content">
+            <div class="dropdown-item">
+              <p *ngIf = "lodging.rentals.length == 0">No current lots</p>
+              <span *ngIf = "lodging.rentals.length > 0">
+                Availability:
+                <ul *ngFor = "let thisRental of lodging.rentals">
+                  Lot {{thisRental.lotNumber}}: {{thisRental.status}}
+                </ul>
+              </span>
             </div>
           </div>
         </div>
