--- a/angular/src/app/modules/booking/featured-lodging/featured-lodging.component.html
+++ b/angular/src/app/modules/booking/featured-lodging/featured-lodging.component.html
@@ -34,7 +34,7 @@
         <div class="dropdown-menu" id="this-dropdown-tooltip" role="menu">
           <div class="dropdown-content">
             <div class="dropdown-item">
-              <p *ngIf = "lotAvailableStringsByLodgingId.get(lodging.id) == undefined">No current lots</p>
+              <p *ngIf = "lotAvailableStringsByLodgingId.get(lodging.id) === undefined">No current lots</p>
               <span *ngIf = "lotAvailableStringsByLodgingId.get(lodging.id) != undefined">
                 Lot Availability:
                 <ul *ngFor = "let thisLotString of lotAvailableStringsByLodgingId.get(lodging.id)">
