--- a/angular/src/app/modules/account/address/address.component.html
+++ b/angular/src/app/modules/account/address/address.component.html
@@ -8,24 +8,12 @@
       <div>
         <p class="heading">street</p>
 
-        <uic-editable
-          [(data)]="address.street"
-          [(editMode)]="editMode"
-          (dataChange)="edited()"
-          type="street"
-        >
+        <uic-editable [(data)]="address.street" [(editMode)]="editMode" (dataChange)="edited()" type="street">
           <p class="title has-text-light is-6">{{ address?.street }}</p>
         </uic-editable>
       </div>
     </div>
 
-    <div class="level-item has-text-light">
-      <div>
-        <p class="heading">apt / unit</p>
-
-        <p class="title has-text-light is-6">123</p>
-      </div>
-    </div>
   </div>
 </div>
 
@@ -34,12 +22,7 @@
     <div class="level-item has-text-light">
       <div>
         <p class="heading">city</p>
-        <uic-editable
-          [(data)]="address.city"
-          [(editMode)]="editMode"
-          (dataChange)="edited()"
-          type="city"
-        >
+        <uic-editable [(data)]="address.city" [(editMode)]="editMode" (dataChange)="edited()" type="city">
           <p class="title has-text-light is-6">{{ address?.city }}</p>
         </uic-editable>
       </div>
@@ -48,12 +31,7 @@
     <div class="level-item has-text-light">
       <div>
         <p class="heading">state</p>
-        <uic-editable
-          [(data)]="address.stateProvince"
-          [(editMode)]="editMode"
-          (dataChange)="edited()"
-          type="state"
-        >
+        <uic-editable [(data)]="address.stateProvince" [(editMode)]="editMode" (dataChange)="edited()" type="state">
           <p class="title has-text-light is-6">{{ address?.stateProvince }}</p>
         </uic-editable>
       </div>
@@ -62,12 +40,7 @@
     <div class="level-item has-text-light">
       <div>
         <p class="heading">postal code</p>
-        <uic-editable
-          [(data)]="address.postalCode"
-          [(editMode)]="editMode"
-          (dataChange)="edited()"
-          type="postal"
-        >
+        <uic-editable [(data)]="address.postalCode" [(editMode)]="editMode" (dataChange)="edited()" type="postal">
           <p class="title has-text-light is-6">{{ address?.postalCode }}</p>
         </uic-editable>
       </div>
@@ -80,12 +53,7 @@
     <div class="level-item has-text-light">
       <div>
         <p class="heading">country</p>
-        <uic-editable
-          [(data)]="address.country"
-          [(editMode)]="editMode"
-          (dataChange)="edited()"
-          type="country"
-        >
+        <uic-editable [(data)]="address.country" [(editMode)]="editMode" (dataChange)="edited()" type="country">
           <p class="title has-text-light is-6">{{ address?.country }}</p>
         </uic-editable>
       </div>
